objects/Property__c.object
<CustomObject>
    <fields>
        <fullName>Building__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Building</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selling_Agent_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selling Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selling_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selling Agent</label>
        <referenceTo>Realtor__c</referenceTo>
        <relationshipLabel>Properties Selling</relationshipLabel>
        <relationshipName>Property</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Multiunit</fullName>
                </value>
                <value>
                    <fullName>House</fullName>
                </value>
                <value>
                    <fullName>Condo</fullName>
                </value>
                <value>
                    <fullName>Lot</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Property</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Selling_Agent__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Building__c</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Property Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <recordTypes>
        <fullName>Building</fullName>
        <active>true</active>
        <label>Building</label>
    </recordTypes>
    <recordTypes>
        <fullName>House</fullName>
        <active>true</active>
        <label>House</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unit</fullName>
        <active>true</active>
        <label>Unit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>